apps/example-python-test-12/qa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-python-test-12
  namespace: qa
  labels:
    app: example-python-test-12
    backstage.io/kubernetes-id: example-python-test-12
    environment: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-python-test-12
  template:
    metadata:
      labels:
        app: example-python-test-12
        backstage.io/kubernetes-id: example-python-test-12
        environment: qa
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
    spec:
      containers:
        - name: example-python-test-12
          image: jaykumark7/example-python-test-12:1.0.3
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
              ephemeral-storage: "100Mi"
            limits:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "100Mi"
