apps/example-python-test-12/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-python-test-12
  namespace: qa
  labels:
    backstage.io/kubernetes-id: example-python-test-12
    environment: qa
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx  
  rules:
    - http:
        paths:
          - path: /example-python-test-12-qa(/|$)(.*) 
            pathType: ImplementationSpecific
            backend:
              service:
                name: example-python-test-12
                port:
                  number: 80
